workspace-sf/force-app/main/default/objects/PlanoParcelamento__c/PlanoParcelamento__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar os planos de parcelamento</description>
    <label>Plano de parcelamento</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planos de parcelamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>