workspace-sf/force-app/main/default/objects/PlanoParcelamento__c/fields/CodigoMeioRecebimento__c.field-meta.xml
<CustomField>
    <fullName>CodigoMeioRecebimento__c</fullName>
    <label>Código do meio de recebimento</label>
    <type>TextArea</type>
</CustomField>