workspace-sf/force-app/main/default/objects/PlanoParcelamento__c/fields/DescricaoMeioRecebimento__c.field-meta.xml
<CustomField>
    <fullName>DescricaoMeioRecebimento__c</fullName>
    <label>Descrição do meio de recebimento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>