workspace-sf/force-app/main/default/objects/PlanoParcelamento__c/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forma de pagamento</label>
    <referenceTo>FormaPagamento__c</referenceTo>
    <relationshipLabel>Planos de parcelamento</relationshipLabel>
    <relationshipName>PlanosParcelamento</relationshipName>
    <type>Lookup</type>
</CustomField>