workspace-sf/force-app/main/default/objects/PlanoParcelamento__c/fields/IdFormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>IdFormaPagamento__c</fullName>
    <formula>CASESAFEID( FormaPagamento__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Forma de pagamento</label>
    <type>Text</type>
</CustomField>