workspace-sf/force-app/main/default/objects/PlanoParcelamento__c/fields/NumeroParcela__c.field-meta.xml
<CustomField>
    <fullName>NumeroParcela__c</fullName>
    <label>Número da parcela</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>